--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5a29c0d
-	base = b4cfc4a
+	base = 7738db1
 	trim = joy_teleop
-	trimbase = 
+	trimbase = b4cfc4a
