--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5a29c0d
-	base = 6e1547f
+	base = 3b985b9
 	trim = key_teleop
-	trimbase = 
+	trimbase = 6e1547f
