--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5a29c0d
-	base = f9d518a
+	base = 351682c
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = f9d518a
