--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5a29c0d
-	base = 082d83a
+	base = a888f04
 	trim = teleop_tools
-	trimbase = 
+	trimbase = 082d83a
