--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 5a29c0d
-	base = ce7bc30
+	base = dd07318
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = ce7bc30
