--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/key_teleop
-	previous = 
-	base = 19c5643
+	previous = 19c5643
+	base = 61c115d
 	trim = 
 	trimbase = 
