--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/teleop_tools
-	previous = 
-	base = b25b8dd
+	previous = b25b8dd
+	base = b8d8a5c
 	trim = 
 	trimbase = 
