--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/mouse_teleop
-	previous = 
-	base = c1d31fc
+	previous = c1d31fc
+	base = e661551
 	trim = 
 	trimbase = 
