--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/teleop_tools_msgs
-	previous = 
-	base = ede3a91
+	previous = ede3a91
+	base = 7dbd653
 	trim = 
 	trimbase = 
