--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/joy_teleop
-	previous = 
-	base = b28cb66
+	previous = b28cb66
+	base = 8a63d77
 	trim = 
 	trimbase = 
