--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = 440f3f3
+	base = 56e6b10
 	trim = joy_teleop
-	trimbase = 
+	trimbase = 440f3f3
