--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = 26d5f36
+	base = aac5c51
 	trim = key_teleop
-	trimbase = 
+	trimbase = 26d5f36
