--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = a2e1a90
+	base = c82c90b
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = a2e1a90
