--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = a32a286
+	base = c14b722
 	trim = teleop_tools
-	trimbase = 
+	trimbase = a32a286
