--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = 715440b
+	base = a0298ed
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = 715440b
