--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = d9b791f
+	base = 092f68c
 	trim = joy_teleop
-	trimbase = 
+	trimbase = d9b791f
