--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = de72205
+	base = 26d8d1d
 	trim = key_teleop
-	trimbase = 
+	trimbase = de72205
