--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = 88f9241
+	base = 828e2bd
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = 88f9241
