--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = 574e1ce
+	base = 4deb6e1
 	trim = teleop_tools
-	trimbase = 
+	trimbase = 574e1ce
