--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 577be16
-	base = 6e102b8
+	base = 725a26b
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = 6e102b8
