--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = 68c8b3c
+	base = 68b5399
 	trim = joy_teleop
-	trimbase = 
+	trimbase = 68c8b3c
