--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = de9acd4
+	base = fb68450
 	trim = key_teleop
-	trimbase = 
+	trimbase = de9acd4
