--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = b73603f
+	base = bbc2aa7
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = b73603f
