--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = 23d681c
+	base = e5d23e9
 	trim = teleop_tools
-	trimbase = 
+	trimbase = 23d681c
