--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = 562a2dc
+	base = 12b96bc
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = 562a2dc
