--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = 0720896
+	base = edb4f47
 	trim = joy_teleop
-	trimbase = 
+	trimbase = 0720896
