--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = ea19fd3
+	base = 5900bd5
 	trim = key_teleop
-	trimbase = 
+	trimbase = ea19fd3
