--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = 657f351
+	base = 09a8447
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = 657f351
