--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = b0c06f7
+	base = 1377e06
 	trim = teleop_tools
-	trimbase = 
+	trimbase = b0c06f7
