--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54f706a
-	base = 6322ae0
+	base = b0d64ad
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = 6322ae0
