--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad646
-	base = 838b3d1
+	base = fc8d50a
 	trim = joy_teleop
-	trimbase = 
+	trimbase = 838b3d1
