--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad646
-	base = f900e14
+	base = 1b5f924
 	trim = key_teleop
-	trimbase = 
+	trimbase = f900e14
