--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad646
-	base = 505747a
+	base = 1a88c26
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = 505747a
