--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad646
-	base = d6a4341
+	base = 0140a24
 	trim = teleop_tools
-	trimbase = 
+	trimbase = d6a4341
