--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad646
-	base = 8766688
+	base = aa5d3c3
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = 8766688
