--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad6468
-	base = 7faf7a01
+	base = 9a0a35db
 	trim = teleop_tools
-	trimbase = 
+	trimbase = 7faf7a01
