--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad6468
-	base = d5d0c95f
+	base = e9e8b135
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = d5d0c95f
