--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad6468
-	base = dce88ab3
+	base = 343beebe
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = dce88ab3
