--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad6468
-	base = 99eaf7f9
+	base = 43cd28b5
 	trim = joy_teleop
-	trimbase = 
+	trimbase = 99eaf7f9
