--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7bad6468
-	base = c54b8c4e
+	base = 52c09f8d
 	trim = key_teleop
-	trimbase = 
+	trimbase = c54b8c4e
