--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea8d546d
-	base = e732c8ab
+	base = fdcaedde
 	trim = teleop_tools_msgs
-	trimbase = 
+	trimbase = e732c8ab
