--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea8d546d
-	base = cb631e00
+	base = fb0303b9
 	trim = teleop_tools
-	trimbase = 
+	trimbase = cb631e00
