--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea8d546d
-	base = dd1e924b
+	base = 753ee5b8
 	trim = mouse_teleop
-	trimbase = 
+	trimbase = dd1e924b
