--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea8d546d
-	base = 1cc53841
+	base = 05fb0041
 	trim = key_teleop
-	trimbase = 
+	trimbase = 1cc53841
