--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ea8d546d
-	base = 302d2b06
+	base = f62a5e83
 	trim = joy_teleop
-	trimbase = 
+	trimbase = 302d2b06
